# L00172381-RLQ

./: README.md  RLQ.code-workspace  SECURITY.md  pyproject.toml
.github/workflows/: generate-docs.yml  python-app.yml
IaC/: Asavva2instance.yaml  Asavva3Instance.yaml
lorequest/: __init__.py  __main__.py  encounter.py  interactive.py  inventory.py  main.py  metadata.py  quest_system.py  villager_gen.py
lorequest/data/: README.md  __init__.py
lorequest/features/: quest_system.py
lorequest/tests/: test_encounter.py  test_interactive.py  test_inventory.py  test_quest_system.py  test_villager.py
